# swagger_server/models/index_search_attributes.py
@@ -14,13 +14,17 @@ class IndexSearchAttributes(Model):
 
     Do not edit the class manually.
     """
-    def __init__(self, attrib_name: str=None, attrib_type: str=None, info: str=None, shortcut_text: str=None):  # noqa: E501
+    def __init__(self, attrib_name: str=None, attrib_type: str=None, attrib_path: str=None, attrib_example: str=None, info: str=None, shortcut_text: str=None):  # noqa: E501
         """IndexSearchAttributes - a model defined in Swagger
 
         :param attrib_name: The attrib_name of this IndexSearchAttributes.  # noqa: E501
         :type attrib_name: str
         :param attrib_type: The attrib_type of this IndexSearchAttributes.  # noqa: E501
         :type attrib_type: str
+        :param attrib_path: The attrib_path of this IndexSearchAttributes.  # noqa: E501
+        :type attrib_path: str
+        :param attrib_example: The attrib_example of this IndexSearchAttributes.  # noqa: E501
+        :type attrib_example: str
         :param info: The info of this IndexSearchAttributes.  # noqa: E501
         :type info: str
         :param shortcut_text: The shortcut_text of this IndexSearchAttributes.  # noqa: E501
@@ -29,6 +33,8 @@ class IndexSearchAttributes(Model):
         self.swagger_types = {
             'attrib_name': str,
             'attrib_type': str,
+            'attrib_path': str,
+            'attrib_example': str,
             'info': str,
             'shortcut_text': str
         }
@@ -36,11 +42,15 @@ class IndexSearchAttributes(Model):
         self.attribute_map = {
             'attrib_name': 'attrib_name',
             'attrib_type': 'attrib_type',
+            'attrib_path': 'attrib_path',
+            'attrib_example': 'attrib_example',
             'info': 'info',
             'shortcut_text': 'shortcut_text'
         }
         self._attrib_name = attrib_name
         self._attrib_type = attrib_type
+        self._attrib_path = attrib_path
+        self._attrib_example = attrib_example
         self._info = info
         self._shortcut_text = shortcut_text
 
@@ -106,6 +116,52 @@ class IndexSearchAttributes(Model):
             )
 
         self._attrib_type = attrib_type
+
+    @property
+    def attrib_path(self) -> str:
+        """Gets the attrib_path of this IndexSearchAttributes.
+
+        Absolute path of the search attribute in nested elastic search indexed document  # noqa: E501
+
+        :return: The attrib_path of this IndexSearchAttributes.
+        :rtype: str
+        """
+        return self._attrib_path
+
+    @attrib_path.setter
+    def attrib_path(self, attrib_path: str):
+        """Sets the attrib_path of this IndexSearchAttributes.
+
+        Absolute path of the search attribute in nested elastic search indexed document  # noqa: E501
+
+        :param attrib_path: The attrib_path of this IndexSearchAttributes.
+        :type attrib_path: str
+        """
+
+        self._attrib_path = attrib_path
+
+    @property
+    def attrib_example(self) -> str:
+        """Gets the attrib_example of this IndexSearchAttributes.
+
+        example for search attribute  # noqa: E501
+
+        :return: The attrib_example of this IndexSearchAttributes.
+        :rtype: str
+        """
+        return self._attrib_example
+
+    @attrib_example.setter
+    def attrib_example(self, attrib_example: str):
+        """Sets the attrib_example of this IndexSearchAttributes.
+
+        example for search attribute  # noqa: E501
+
+        :param attrib_example: The attrib_example of this IndexSearchAttributes.
+        :type attrib_example: str
+        """
+
+        self._attrib_example = attrib_example
 
     @property
     def info(self) -> str:
